# lcov-summarize-markdown

./: Cargo.toml
src/: cli.rs  command.rs  coverage.rs  git.rs  main.rs
