[package]
name = "lcov-summarize-markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
lcov = "0.8.1"
miette = { version = "5.10.0", features = ["fancy", "backtrace"] }
